stashmanager: ensure stash directory is a relative path

BUG: 485551